--- a/app/src/main/res/layout/dialog_expenses_list.xml
+++ b/app/src/main/res/layout/dialog_expenses_list.xml
@@ -68,6 +68,7 @@
         android:layout_margin="16dp"
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="Add expense"
-        app:tint="@android:color/white" />
+        app:backgroundTint="?attr/colorPrimary"
+        app:tint="?attr/colorOnPrimary" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
